# Labeeb

./: LICENSE  Pipfile  README.md  app.py  optimization.py  pyproject.toml  requirements.txt  setup.py  softmax.ipynb
classic/: nn.py
data/: W1.npy  W2.npy
data_preparation/: README.md  dataset.py
examples/: binary_classification.py  mnist.py  mnist_original.py
natasy/: optimization.py
natasy/data/corpus-26/data/: dev_prepared_for_seg.tsv  dev_segmented (copy).tsv  dev_segmented.tsv  train_prepared_for_seg.tsv  train_segmented (copy).tsv  train_segmented.tsv
natasy/data/corpus-26/result/: Mohamed_Eldesouki1.subtask1.test  Mohamed_Eldesouki2.subtask1.dev  Mohamed_Eldesouki2.subtask1.test  run_01.P  run_02.G  run_02.P  run_03.P  run_dev_np_01.P  run_dev_np_20190518013132.P  run_dev_np_20190518022209.P  run_dev_np_20190518022718.P  run_dev_np_20190518023516.P  (+26 more)
natasy/data_preparation/: README.md  __init__.py  dataset.py
natasy/examples/: app.py  binary_classification.py  hello_world.py  madar_subtask_01.py  mnist.py  mnist_original.py  sample_softmax.py  softmax_test.py
natasy/neural_network/: __init__.py  activations.py  initializations.py  layers.py  network.py  networks.py
natasy/neural_network/layers/: __init__.py  convLayer.py  fullyconnectedlayer.py  neuralnetworklayer.py  outputlayer.py  softmax_with_xentropy.py
src/labeeb/: optimization.py
src/labeeb/data_preparation/: __init__.py  dataset.py
src/natasy/neural_network/: initializations.py  network.py
tests/: test_activations.py  test_initializations.py  test_optimization.py
(+17 files in other folders)
